--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,6 +6,7 @@
   margin: 5px;
   padding: 5px;
   border-bottom: #bfcc5e;
+  position: sticky;
 }
 
 .navGrid {
@@ -35,14 +36,20 @@
   border-radius: 20px;
   margin-bottom: 20px;
   margin-top: 30px;
+  
+  -webkit-box-shadow: 0px 0px 34px 5px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 34px 5px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 34px 5px rgba(0,0,0,0.75);;
 }
 .projectNames {
   padding: 15px;
+  
 }
 
 .projectList {
   margin-left: 100px;
   margin-right: 100px;
+  margin-bottom: 100px;
 }
 
 .buttons {
@@ -68,7 +75,7 @@
   display: block;
   margin: auto;
   /* flex-wrap: wrap; */
-  margin-top: 30px;
+  margin-top: 8%;
   margin-bottom: 50px;
   /* margin-left: 200px; */
   font-family: Comic Neue, cursive;
@@ -79,6 +86,11 @@
 
   align-content: center;
   justify-content: center;
+
+  -webkit-box-shadow: 0px 0px 34px 5px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 34px 5px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 34px 5px rgba(0,0,0,0.75);;
+  padding: 50px;
 }
 .heading {
   font-size: 25px;
@@ -108,7 +120,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 30px;
+  
+  margin-top: 40px;
+  margin-left: 20%;
+  margin-right: 20%;
+
+  -webkit-box-shadow: 0px 0px 42px 13px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 42px 13px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 42px 13px rgba(0,0,0,0.75);
+  
+  padding: 20px 0px 40px 0px;
 }
 
 .inputElement {
@@ -122,6 +143,7 @@
   margin: 20px;
   color: black;
   padding: 20px;
+  font-family: "Comic Neue";
 }
 
 .textarea {
@@ -134,6 +156,7 @@
   font-size: 20px;
   color: black;
   padding: 20px;
+  font-family: "Comic Neue";
 }
 .formButton {
   width: 20%;
@@ -143,4 +166,67 @@
   background-color: #007bff;
   padding: 10px;
   cursor: pointer;
+}
+
+.aboutIntro {
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-content: center; */
+  /* text-align: center; */
+  font-size: 20px;
+  /* margin: 50px; */
+  padding: 20px;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.leftAlign {
+}
+
+.aboutHeading {
+  display: block;
+  margin: auto;
+  /* flex-wrap: wrap; */
+  margin-top: 30px;
+  margin-bottom: 50px;
+  /* margin-left: 200px; */
+  font-family: Comic Neue, cursive;
+  font-weight: 700;
+  /* margin-top: 200px; */
+  font-size: 50px;
+  width: 40%;
+
+  align-content: center;
+  justify-content: center;
+  margin-left: 20%;
+}
+
+.para {
+  padding-bottom: 20px;
+}
+
+.webdev {
+  color: #f11ea4;
+}
+
+.homeButton{
+  width: 20%;
+  border-radius: 20px;
+  font-size: 20px;
+  border: 2px solid rgb(160, 160, 207);
+  background-color: #007bff;
+  padding: 10px;
+  cursor: pointer;
+  margin-top: 30px;
+}
+
+.shadow{
+  margin-top: 40px;
+  margin-bottom: 100px;
+  margin-left: 50px;
+  margin-right: 50px;
+  padding: 50px;
+  -webkit-box-shadow: 0px 0px 42px 13px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 42px 13px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 42px 13px rgba(0,0,0,0.75);
 }
